Mon Oct  2 19:21:21 2000  Gray Watson  <gray@whopper.be.256.com>

	* Added -l loose-fields switch to better handle wierd column output.

Tue Aug  8 11:40:23 2000  Gray Watson  <gray@256.com>

	* Added case insensitive flag.  -i.

Mon Jul 10 15:56:10 2000  Gray Watson  <gray@256.com>

	* Added ignore-blanks (-b) flag.

	* If sort by count then added secondary sort by key.

	* If -C then sort by key (-k) also enabled.

Thu Jun 22 17:45:30 2000  Gray Watson  <gray@256.com>

	* Fixed the -C --no-counts flag.

Mon Jun 12 16:40:13 2000  Gray Watson  <gray@256.com>

	* Added -m (min-matches) and -M (max-matches) functionality.